# axiom

./: .dockerignore  .gitignore  Dockerfile  ProjectPlan.md  doc_ingestor.py  fly.toml  main.py  pyproject.toml  requirements.txt
chroma_data/: chroma.sqlite3
